    cmake_minimum_required(VERSION 3.19)
    project(hash_matcher.exe)
    set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
    set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
    add_executable(hash_matcher.exe main.cpp)

    set(BUILD_NUMBER_FILENAME "BuildNumber.txt")
    file(READ ${CMAKE_SOURCE_DIR}/${BUILD_NUMBER_FILENAME} BUILD_NUMBER)
    set(CPACK_PACKAGE_VERSION "${BUILD_NUMBER}")
    set(CPACK_GENERATOR "DEB")
    set(CPACK_PACKAGE_VENDOR "is300Guy")
    set(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Flight file integrity checker ($arch)")
    set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Droni.Mitchell@littledeb13.com")
    include(CPack)

