    cmake_minimum_required(VERSION 3.19)
    project(hash-matcher-aarch64)
    set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
    set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
    add_executable(hash-matcher-aarch64 main.cpp)

    set(CPACK_PACKAGE_VERSION "$ENV{BUILD_NUMBER}")
    set(CPACK_GENERATOR "DEB")
    set(CPACK_PACKAGE_VENDOR "is300Guy")
    set(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Flight file integrity checker ($arch)")
    set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Droni.Mitchell@littledeb13.com")
    include(CPack)

